--- a/Lib_BIL/CSS/printer.css
+++ b/Lib_BIL/CSS/printer.css
@@ -1,29 +1,3 @@
- /* Display header and footer on every page for printing 
- thead { display: table-header-group;} tfoot {display: table-footer-group;}
-
- 
- thead #contentHeader {
-	border-bottom: 1px solid #000;
-	text-align:center;
-	padding-bottom:2px;
-	font-weight:bold;
-	color:#000 !important;
-}
-tfoot #contentFooter {
-	font-weight:bold;
-	border-top: 1px solid #000;
-	text-align:center;
-	font-size:0.8em;
-	padding:5px;
-	margin:5px;
-	color:#000 !important;
-}
-thead #contentHeader .header-big {
-	font-size:1.1em;
-	margin:0px;
-	padding:0px;
-}
-*/
 
 /* Hide header and footer on screen */
  @media screen {
@@ -32,6 +6,7 @@ thead #contentHeader .header-big {
 		display:	none		!important;
 				
 	}
+	
  } 
  
  /* CSS for printing only */
@@ -46,6 +21,10 @@ thead #contentHeader .header-big {
 	 *	so these will 'override' styles applied to the elements by Layout
 	 */
 
+	 /* Fix text cut on the right side 
+	#pane_content > tbody > tr > td > div { width:95%;}
+	#contentWrapperPrint > tbody > tr > td { vertical-align: top;}*/
+	
 	 .metadata {  
 		font-weight:  bold;
 	}
@@ -61,7 +40,7 @@ thead #contentHeader .header-big {
 	
 	html, body {
 		/* NEUTRALIZE 'layout container' styles */
-		overflow:	visible 	!important;
+		overflow:	visible 	!important; 
 		width:		auto		!important;
 		height:		auto		!important;
 		position:	static		!important;
@@ -86,11 +65,15 @@ thead #contentHeader .header-big {
 	.ui-layout-pane-east ,*/
 	.ui-layout-pane-north {
 		display:	table-header-group		!important;
-		
-			
+		border-bottom: 1px solid #000;
+		text-align:center;
+		padding-bottom:2px;
+		font-weight:bold;
+		color:#000 !important;
+				
 	}
 	.ui-layout-pane-center {
-		display:	table-row-group		!important;
+		display:	table-row-group			!important;
 		/* OPTIONAL: change cosmetic styles as desired
 		border:		0			!important;
 		padding:	0			!important;
@@ -99,10 +82,63 @@ thead #contentHeader .header-big {
 	}
 	.ui-layout-pane-south {
 		display:			table-footer-group		!important;
-		text-align: 		center;
-		font-weight:  		bold;
-		font-size:			10px;
+		font-weight:bold;
+		border-top: 1px solid #000;
+		text-align:center;
+		font-size:0.8em;
+		padding:5px;
+		margin:5px;
+		color:#000 !important;
 		
+	}
+	
+	.ui-layout-pane-north .print_header{
+		font-size:1.1em;
+		margin:0px;
+		padding:0px;
+		
+	}
+	
+	
+	/* Hide second title of the figures */
+	.x-graphic-2-0 > div[class*="x-title"], .x--ufe-fig-title-1-0 {
+		display:none;
+	}
+	/* Remove vertical lines */
+	.x-figure-1-0 .x-sheet-1-1, .x-figure-1-0 .x-graphic-1-1, .x-graphic-2-0 .x-sheet-1-1, .x-graphic-1-0 .x-sheet-1-0 {
+		border:0px !important;
+	}	
+	/* Remove id below figure */
+	.x-figure-1-0 img + div, .x-graphic-2-0 img + div, .x-graphic-1-0 img + div {
+		display:none !important;
+	}
+	/* Add page break after every module and figure */
+	.x-module-1-0  {
+		page-break-before:always;
+	}
+	.x-figure-1-0  {
+		page-break-before:always;
+		margin-top:0px;
+	}
+	.x-task-1-0 .x-graphic-1-0  {
+		page-break-before:always;
+		margin-top:0px !important;
+	}	
+	/* Fix page break caused by some margins and long titles when printing figures */
+	.x-task-1-0 .x-graphic-1-0 > div[class*="x-title"], .x-task-1-0 .x-graphic-1-0 .x-sheet-1-0  {
+		margin-top:0px !important;
+	}
+	.x-task-1-0 .x-graphic-1-0 > div[class*="x-title"] {
+		font-size:12pt;
+	}
+	/* Do not put a page break after the first module or figure of the page */
+	.x-module-1-0-first, .x-figure-1-0-first, .x-task-1-0 .x-graphic-1-0-first{
+		page-break-before:auto !important;
+	}
+
+	/* Display all tables */
+	div[class*="x-table"] {
+		display: block				!important;
 	}
 
  }
