--- a/Lib_BIL/CSS/printer.css
+++ b/Lib_BIL/CSS/printer.css
@@ -2,8 +2,8 @@
 /* CSS for screen only */
 /* Hide header and footer on screen */
  @media screen {
-    .ui-layout-pane-south, #pane_footer {
-        display:    none        !important;
+    .ui-layout-pane-south, .footer {
+        display: none        	!important;
     }
     
     .metadata {
@@ -13,24 +13,21 @@
     .print_header {
         display: none;
     }
-    
-    .print_sep_top, .print_sep_bottom {
-        display: none;
-    }
  } 
  
  /* CSS for printing only */
  @media print {
 
     html, body {
-        /* NEUTRALIZE 'layout container' styles */
-        overflow:   visible     !important; 
-        width:      auto        !important;
-        height:     auto        !important;
-        position:   static      !important;
+        overflow: visible     	!important; 
+        width: 100%        		!important;
+        min-width: 100%        	!important;
+        height: auto        	!important;
+        position: static      	!important;
     }
     
-    .ui-layout-pane, .ui-layout-resizer, .ui-layout-toggler {
+    .ui-layout-pane, .ui-layout-resizer, .ui-layout-toggler,
+    .ui-layout-pane-north, .ui-layout-pane-center, .ui-layout-pane-south {
         display:    none        !important;
         position:   relative    !important;
         top:        auto        !important;
@@ -42,123 +39,114 @@
         overflow:   visible     !important;
     }
 
-    #pane_content { 
+    #pane_print { 
         width: 98%;
     }
     
     .metadata {
         font-weight: bold;
         padding-bottom: 5px;
+        text-align: center;
     }
     
     .manual-pt-no {
-    	padding-bottom: 5px;
-    	border-bottom: 1px solid black;
+        padding-bottom: 5px;
+        border-bottom: 1px solid black;
     }
 
     #banner_img, .menu {
         display: none;
     }
-    
-    .ui-layout-pane-north {
-        display:    table-header-group      !important;
-        border-bottom: 1px solid #000;
-        text-align:center;
-        padding-bottom:2px;
-        font-weight:bold;
-        color:#000 !important;
-                
-    }
-    .ui-layout-pane-center {
-        display:    table-row-group         !important;
-        /* OPTIONAL: change cosmetic styles as desired
-        border:     0           !important;
-        padding:    0           !important;
-        background: transparent !important;
-        */
-    }
-    .ui-layout-pane-south {
-        display:            none        !important;
-        font-weight:bold;
-        text-align:center;
-        font-size:0.8em;
-        padding:5px;
-        margin:5px;
-        color:#000 !important;
         
+    #pane_print_header {
+        display: table-header-group;
+    }
+    #pane_print_footer {
+        display: table-footer-group;
     }
     
-    .ui-layout-pane-north .print_header{
-        font-size:1.1em;
-        margin:0px;
-        padding:0px;
-        
+    #pane_print_content {
+        display: table-row-group;
+    }
+    
+    .print_header {
+        font-size: 1.1em;
+        margin: 0px;
+        padding: 0px;
     }
     
     .footer {
         padding-top: 5px;
         border-top: 1px solid black;
+        font-size: 0.9em;
     }
     
     /* Hide second title of the figures */
     .x-graphic-2-0 > div[class*="x-title"], .x--ufe-fig-title-1-0 {
-        display:none;
+        display: none;
     }
     /* Remove vertical lines */
     .x-figure-1-0 .x-sheet-1-1, .x-figure-1-0 .x-graphic-1-1, .x-graphic-2-0 .x-sheet-1-1, .x-graphic-1-0 .x-sheet-1-0 {
-        border:0px !important;
+        border: 0px 			!important;
     }   
     /* Remove id below figure */
     .x-figure-1-0 img + div, .x-graphic-2-0 img + div, .x-graphic-1-0 img + div {
-        display:none !important;
+        display: none 			!important;
+    }
+    
+    /* Do not put a page break after the first module or figure of the page */
+    .x-module-1-0-first, .x-figure-1-0-first, .x-task-1-0 .x-graphic-1-0-first {
+        page-break-before: avoid !important;
     }
     /* Add page break after every module and figure */
-    .x-module-1-0  {
-        page-break-before:always;
+    .x-module-1-0 {
+        page-break-before: auto;
     }
-    .x-figure-1-0  {
-        page-break-before:always;
-        margin-top:0px;
+    
+    /*.pr-figure {*/
+    .x-figure-1-0 {
+        page-break-before: always;
+        margin-top: 0px;
     }
+    
     .x-task-1-0 .x-graphic-1-0  {
-        page-break-before:always;
-        margin-top:0px !important;
+        page-break-before: always;
+        margin-top: 0px 		!important;
     }   
     /* Fix page break caused by some margins and long titles when printing figures */
-    .x-task-1-0 .x-graphic-1-0 > div[class*="x-title"], .x-task-1-0 .x-graphic-1-0 .x-sheet-1-0  {
-        margin-top:0px !important;
+    .x-task-1-0 .pr-figure > div[class*="x-title"], .x-task-1-0 .x-graphic-1-0 .x-sheet-1-0  {
+        margin-top: 0px 		!important;
     }
-    .x-task-1-0 .x-graphic-1-0 > div[class*="x-title"] {
-        font-size:12pt;
-    }
-    /* Do not put a page break after the first module or figure of the page */
-    .x-module-1-0-first, .x-figure-1-0-first, .x-task-1-0 .x-graphic-1-0-first{
-        page-break-before:auto !important;
+    .x-task-1-0 .pr-figure > div[class*="x-title"] {
+        font-size: 11pt 		!important;
     }
 
     /* Display all tables */
     div[class*="x-table"] {
-        display: block              !important;
-    }
-    
-    table[class*="x-table-big"] {
-        clear: left !important;
-        margin-left: 0pt !important;
-    }
-    
-    table[class*="x-table-big"] td {
-        font-size: 8pt              !important;
-    }
-    table[class*="x-table-big"] th {
-        font-size: 8pt              !important;
-    }
-    
-    table[class*="x-table-big"] .x-para {
-        margin-right: 0pt;
-        text-indent: 0pt;
-        margin-top: 3pt             !important;
-        margin-left: 3pt            !important;
+        display: block          !important;
     }
 
-
+	/*
+	table[border="1"] {
+        border: 1px solid black;
+    }
+    table[border="1"] > tbody > tr {
+        border: 1px solid black;
+    }
+    table[border="1"] > thead > tr {
+        border: 1px solid black;
+    }
+    table[border="1"] > tfoot > tr {
+        border: 1px solid black;
+    }
+    table[border="1"] > thead > tr > th {
+        border: 1px solid black;
+    }
+    table[border="1"] > tfoot > tr > th {
+        border: 1px solid black;
+    }
+    table[border="1"] > tbody > tr > td {
+        border: 1px solid black;
+    }
+    */
  }
