DBE - UI + Business

--- a/C#/Project/PWC Bilingual Publication/EuCA.Pwc.Pub.UI/View/ShellView.xaml
+++ b/C#/Project/PWC Bilingual Publication/EuCA.Pwc.Pub.UI/View/ShellView.xaml
@@ -2,20 +2,21 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Mahapps="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="{Binding Title}" Height="300" Width="600"
+        Title="{Binding Title}" Height="260" Width="600"
         ResizeMode="CanResizeWithGrip"
         BorderBrush="{DynamicResource AccentColorBrush}"
         EnableDWMDropShadow="True"
         WindowTransitionsEnabled="False"
         BorderThickness="1"
         WindowStartupLocation="CenterScreen">
-    <Grid Margin="15">
+    <Grid Margin="15" 
+                     Cursor="{Binding ShellCursor}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -29,47 +30,63 @@
                     Content="Original manual"/>
         <TextBox    Grid.Row="0" Grid.Column="1" 
                     Margin="0 0 10 10"
-                    Text="{Binding FileOrig, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    Text="{Binding FileOrig, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    IsEnabled="{Binding Enabled}"/>
         <Button     Grid.Row="0" Grid.Column="2" 
                     Content="..."
                     Margin="0 0 0 10"
-                    Command="{Binding BrowseCommand}" CommandParameter="FileOrig"/>
+                    Command="{Binding BrowseCommand}" CommandParameter="FileOrig"
+                    IsEnabled="{Binding Enabled}"/>
 
         <Label      Grid.Row="1" Grid.Column="0"
                     Margin="0 0 10 10"
                     Content="Translated manual"/>
         <TextBox    Grid.Row="1" Grid.Column="1" 
                     Margin="0 0 10 10"
-                    Text="{Binding FileTrad, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    Text="{Binding FileTrad, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    IsEnabled="{Binding Enabled}"/>
         <Button     Grid.Row="1" Grid.Column="2" 
                     Content="..."
                     Margin="0 0 0 10"
-                    Command="{Binding BrowseCommand}" CommandParameter="FileTrad"/>
+                    Command="{Binding BrowseCommand}" CommandParameter="FileTrad"
+                    IsEnabled="{Binding Enabled}"/>
 
         <Label      Grid.Row="2" Grid.Column="0"
                     Margin="0 0 10 10"
                     Content="XSL directory"/>
         <TextBox    Grid.Row="2" Grid.Column="1" 
                     Margin="0 0 10 10"
-                    Text="{Binding DirXsl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    Text="{Binding DirXsl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    IsEnabled="{Binding Enabled}"/>
         <Button     Grid.Row="2" Grid.Column="2" 
                     Content="..."
                     Margin="0 0 0 10"
-                    Command="{Binding BrowseCommand}" CommandParameter="DirXsl"/>
+                    Command="{Binding BrowseCommand}" CommandParameter="DirXsl"
+                    IsEnabled="{Binding Enabled}"/>
 
         <Label      Grid.Row="3" Grid.Column="0"
-                    Margin="0 0 10 0"
+                    Margin="0 0 10 10"
                     Content="Output directory"/>
         <TextBox    Grid.Row="3" Grid.Column="1" 
-                    Margin="0 0 10 0"
-                    Text="{Binding DirOut, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    Margin="0 0 10 10"
+                    Text="{Binding DirOut, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    IsEnabled="{Binding Enabled}"/>
         <Button     Grid.Row="3" Grid.Column="2" 
                     Content="..."
-                    Command="{Binding BrowseCommand}" CommandParameter="DirOut"/>
+                    Margin="0 0 0 10"
+                    Command="{Binding BrowseCommand}" CommandParameter="DirOut"
+                    IsEnabled="{Binding Enabled}"/>
 
-        <ProgressBar Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" Margin="5 0 0 0" IsIndeterminate="True"/>
+        <CheckBox   Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" 
+                    Content="Delete temporary files" 
+                    IsChecked="{Binding DeleteTempFile}"
+                    IsEnabled="{Binding Enabled}"/>
+        <!--<ProgressBar Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" Margin="5 0 0 0" IsIndeterminate="True"/>-->
         
-        <DockPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Right" Margin="0 0 0 10">
+        <DockPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" 
+                   HorizontalAlignment="Right" 
+                   Margin="0 0 10 0"
+                   Cursor="Arrow">
             <Button DockPanel.Dock="Right" Content="Cancel" 
                     Margin="10 0 0 0"
                     Command="{Binding CancelCommand}"/>
