Bilingual Updates for security and messages

--- a/Lib_BIL/CSS/content.css
+++ b/Lib_BIL/CSS/content.css
@@ -743,7 +743,7 @@
 
 .x-ref-nbr-1-0 {margin-left: 0pt; margin-right: 0pt; }
 
-.x-ref-broken { color: blue;}
+.x-ref-broken { color: black;}
 
 .x-remarks-1-0 {margin-left: 0pt; margin-right: 0pt; }
 
