maintenance (statement, csu)

--- a/CSS/content.css
+++ b/CSS/content.css
@@ -385,7 +385,7 @@
 .x-list6-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x-list7-1-0 {margin-left: 0pt; margin-right: 0pt; }
 
-.x-lmm-statement-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; font-size: 10pt; text-align: justify; margin-top: 10pt; margin-bottom: 10pt; }
+.x-lmm-statement-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; font-size: 10pt; text-align: center; margin-top: 10pt; margin-bottom: 10pt; }
 .x-lof-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
 .x-lot-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
 .x-lof-item-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; }
