--- a/CSS/content.css
+++ b/CSS/content.css
@@ -600,7 +600,7 @@
 .x-para-49-0 {margin-left: 0pt; margin-right: 0pt; }
 .x-para-50-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; margin-left: 18pt; }
 .x-para-51-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; margin-left: 1.5em; margin-bottom: 6pt; }
-.x-para-52-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; margin-left: 18pt; }
+.x-para-52-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
 .x-para {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; margin-left: 18pt; }
 
 .x-part-1-0 {margin-left: 0pt; margin-right: 0pt; }
@@ -766,27 +766,25 @@
 .x-sbdata-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; }
 .x-sbeff-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x-sbeff-1-1 {}
-.x-sb-1-0 {margin-left: 0pt; margin-right: 0pt; color: #0000FF; text-decoration: underline ; text-decoration: underline ; }
+.x-sb-1-0 {margin-left: 0pt; margin-right: 0pt; color: #0000FF; text-decoration: underline ; }
 .x-sb-item-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x-sblist-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; margin-top: 8pt; }
 
-.x-sbnbr-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; color: #0000FF; text-decoration: underline ; text-decoration: underline ; }
-.x-sbnbr-2-0 {margin-left: 0pt; margin-right: 0pt; color: #0000FF; text-decoration: underline ; text-decoration: underline ; }
+.x-sbnbr-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; color: #0000FF; text-decoration: underline ; }
+.x-sbnbr-2-0 {margin-left: 0pt; margin-right: 0pt; color: #0000FF; text-decoration: underline ; }
 
-.x-sb-stat-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; color: #0000FF; text-decoration: underline ; text-decoration: underline ; }
+.x-sb-stat-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
 .x-sb-stat-1-1 {}
 .x-sb-stat-1-2 {}
 .x-sb-stat-1-3 {}
 .x-sb-stat-1-4 {}
 .x-sb-stat-1-5 {}
-.x-sb-stat-2-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; color: #0000FF; text-decoration: underline ; text-decoration: underline ; }
+.x-sb-stat-2-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
 .x-sb-stat-2-1 {}
 .x-sb-stat-2-2 {}
 .x-sb-stat-2-3 {}
 .x-sb-stat-2-4 {}
 .x-sb-stat-2-5 {}
-.x-sb-stat-3-0 {margin-left: 0pt; margin-right: 0pt; color: #0000FF; text-decoration: underline ; text-decoration: underline ; }
-.x-sb-stat-4-0 {margin-left: 0pt; margin-right: 0pt; color: #0000FF; text-decoration: underline ; text-decoration: underline ; }
 
 .x-sd-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
 
