--- a/CSS/content.css
+++ b/CSS/content.css
@@ -1,4 +1,9 @@
 
+.x-body {font-family: serif; font-weight: normal; font-style: normal; score-spaces: true; line-height: 1.1; margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; font-family: Verdana; font-size: 10pt; margin-left: 5px; width: 95%; }
+
+.x-body table {border-color: #000000; font-size: 100%; border-collapse: collapse; }
+.x-body td, .x-body th { border-color: #000000; }
+
 .x-body a { text-decoration:none; border-bottom: 1px dashed #6666ff; }
 .x-body a:hover { text-decoration:none; background-color:#ddddff; border-bottom: none;}
 
@@ -859,6 +864,7 @@
 .x-state-1-1 {}
 
 .x-statement-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; font-weight: normal; font-size: 11pt; text-align: center; }
+.x-statement-2-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; font-weight: normal; font-size: 11pt; text-align: center; margin-bottom: 7pt; }
 
 .x-std-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x-std-1-1 {}
@@ -1402,10 +1408,6 @@
 .x-zip-1-0 {margin-left: 0pt; margin-right: 0pt; }
 .x-zip-1-1 {}
 
-.x-body {font-family: serif; font-weight: normal; font-style: normal; score-spaces: true; line-height: 1.1; margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; font-family: Verdana; font-size: 10pt; margin-left: 5px; width: 95%; }
-
-.x-body table {border-color: #000000; font-size: 100%; border-collapse: collapse; }
-
 table table[class~="x-address-1-0"] {width: 100%; }
 table table[class~="x-address-2-0"] {width: 100%; }
 table table[class~="x-address-3-0"] {width: 100%; }
@@ -1525,6 +1527,5 @@ table table[class~="x-unlitem-13-0"] {width: 100%; }
 
 table[frame="box"][border]:not([border="0"]), table[frame="border"][border]:not([border="0"]), table:not([frame])[border]:not([border="0"]) { border-style: solid; }
 table[rules][rules="none"]  > tr > td, table[rules][rules="none"] > * > tr > td, table[rules][rules="none"] > tr > th, table[rules][rules="none"] > * > tr > th, table[rules][rules="none"] > td, table[rules][rules="none"] > th { border-width: thin; border-style: none; }
-.x-body td, .x-body th { border-color: #000000; }
 
 .pr-tbl { margin-top: 10px; }
